--- a/index.html
+++ b/index.html
@@ -1,21 +1,48 @@
 <!doctype html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Article</title>
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-	<div class="wrap">
-		<h1>Hello world</h1>
-	</div>
 
+<body>
+    <div class="wrap">
+        <header class="header">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container">
+                <div><a href="#" class="header-logo">
+                    <div class="header-logo-icon"></div>
+                    <span class="header-logo-text">Logo.pl</span>
+                </a></div>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Polska</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Świat</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Sport</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Zdrowie<span class="sr-only">(current)</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            </div>
+        </header>
+    </div>
 </body>
+
 </html>
