Add and style  main section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,68 @@
             </nav>
             </div>
         </header>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-8 article-wrap">
+                    <article class="article">
+                        <h1 class="article-title">To jest szczepionka, której potrzebujemy</h1>
+                        <div class="article-data">
+                            <p class="article-author">Anna Kowalska</p>
+                            <p class="article-date">13.10.2020 15:53</p>
+                        </div>
+                        <p class="article-intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec blandit molestie orci. Pellentesque habitant morbi
+                        tristique senectus et netus et malesuada fames ac turpis egestas. Nulla ut malesuada nunc, ut lacinia tortor. Aenean
+                        vitae turpis faucibus, ullamcorper ex eu, congue lorem. Mauris ut condimentum diam. Nullam blandit magna aliquam mollis
+                        laoreet. Mauris erat leo, tempor vel tincidunt non, semper et turpis.</p>
+                        <figure class="figure">
+                            <img src="images/vaccine.jpg" class="figure-img img-fluid rounded"
+                                alt="Potrzebujemy szczepionek">
+                            <figcaption class="figure-caption">Fot. Pixabay/Spencer Davis</figcaption>
+                        </figure>
+                        <p class="article-text">Curabitur eleifend sem ac metus volutpat, in vestibulum nunc gravida. Mauris eu nibh mauris. Pellentesque justo diam,
+                        molestie at risus sed, eleifend malesuada ligula. Donec at lectus dolor. Quisque dictum nunc odio, eu tincidunt est
+                        luctus in. Donec dapibus iaculis enim, in dignissim lorem rhoncus vel. Nam eu cursus nisl. Pellentesque eget turpis vel
+                        enim egestas dictum. Donec iaculis ligula eu nunc tempus, quis facilisis orci tempor.
+                        <br><br>
+                        Phasellus faucibus egestas tincidunt. Morbi facilisis sapien vitae blandit maximus. Suspendisse potenti. Maecenas
+                        accumsan leo lorem, ut auctor elit pretium sit amet. Fusce vestibulum dolor in magna placerat luctus. Vivamus dignissim
+                        massa metus. Aenean hendrerit felis vel velit varius, non luctus leo varius. Aliquam malesuada lacus ac dignissim
+                        blandit. Morbi pulvinar lacinia arcu ut bibendum. Fusce sit amet leo mollis, imperdiet ante quis, hendrerit magna. Morbi
+                        ornare ex sit amet euismod condimentum. Nunc ut volutpat est, ut blandit ipsum.
+                        <br><br>
+                        Curabitur vitae commodo enim. Nam vitae risus pretium, viverra enim sed, varius sem. Morbi a felis est. Phasellus
+                        porttitor molestie mattis. Donec molestie, massa ut finibus vehicula, tellus felis feugiat neque, mollis imperdiet
+                        sapien eros id nisi. Donec commodo sem eu lectus mollis, vel viverra elit semper. Sed pharetra sollicitudin odio non
+                        egestas. Donec sollicitudin tempus lobortis. Aenean mattis felis ac iaculis gravida. Duis id hendrerit nunc. Phasellus
+                        tempus imperdiet lectus porttitor consectetur. Phasellus non tincidunt nibh, in mattis eros. Vestibulum pulvinar dolor
+                        lectus. Fusce sit amet massa eget sapien mollis condimentum vitae efficitur tellus.</p>
+                    </article>
+                </div>
+                <div class="col-12 col-md-4 sidebar-wrap">
+                    <aside>
+                        <h2 class="sidebar-title">Zobacz również</h2>
+                        <figure class="figure">
+                            <img src="images/doctor.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
+                            <figcaption class="figure-caption">Lekarze leczą w szpitalach</figcaption>
+                        </figure>
+                        <figure class="figure">
+                            <img src="images/corona.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
+                            <figcaption class="figure-caption">Kolejne restrykcje</figcaption>
+                        </figure>
+                        <figure class="figure">
+                            <img src="images/shopping.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
+                            <figcaption class="figure-caption">Sklepy zamknięte z powodu pandemii</figcaption>
+                        </figure>
+                        <figure class="figure">
+                            <img src="images/doctor-yes.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
+                            <figcaption class="figure-caption">Johnson&Johnson bezpieczna</figcaption>
+                        </figure>
+                    </aside>
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
 
