Add comments section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+            integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -79,32 +81,82 @@
                         tempus imperdiet lectus porttitor consectetur. Phasellus non tincidunt nibh, in mattis eros. Vestibulum pulvinar dolor
                         lectus. Fusce sit amet massa eget sapien mollis condimentum vitae efficitur tellus.</p>
                     </article>
-                </div>
-                <div class="col-12 col-md-4 sidebar-wrap">
-                    <aside>
-                        <h2 class="sidebar-title">Zobacz również</h2>
-                        <figure class="figure">
-                            <img src="images/doctor.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
-                            <figcaption class="figure-caption">Lekarze leczą w szpitalach</figcaption>
-                        </figure>
-                        <figure class="figure">
-                            <img src="images/corona.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
-                            <figcaption class="figure-caption">Kolejne restrykcje</figcaption>
-                        </figure>
-                        <figure class="figure">
-                            <img src="images/shopping.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
-                            <figcaption class="figure-caption">Sklepy zamknięte z powodu pandemii</figcaption>
-                        </figure>
-                        <figure class="figure">
-                            <img src="images/doctor-yes.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
-                            <figcaption class="figure-caption">Johnson&Johnson bezpieczna</figcaption>
-                        </figure>
-                    </aside>
-                </div>
-            </div>
-        </div>
+                    <div class="article-comments">
+                        <form>
+                            <div class="form-group">
+                                <label for="comment">Komentarze</label>
+                                <textarea name="comment" class="form-control" rows="2"></textarea>
+                                <div class="form-row-last">
+                                    <button type="submit" class="btn btn-sm btn-secondary">Skomentuj</button>
+                                </div>
+                            </div>
+                        </form>
 
-    </div>
+                        <div class="row row-comment">
+                            <div class="comment">
+                                <div class="comment-header">
+                                    <span class="comment-author">nick_nick</span><span class="comment-date">15.10.2020 14:45</span>
+                                </div>
+                                <div class="comment-body">
+                                    <p class="comment-content">Phasellus faucibus egestas tincidunt. Morbi facilisis sapien vitae blandit maximus!</p>
+                                </div>
+                                <div class="comment-footer">
+                                    <button type="button"class="btn vote-up">
+                                        <i class="fas fa-thumbs-up"></i>
+                                    </button>
+                                    <span class="comment-votes-up">0</span>
+                                    <button type="button" class="btn vote-up">
+                                        <i class="fas fa-thumbs-down"></i>
+                                    </button>
+                                    <span class="comment-votes-down">0</span>
+                                </div>
+                            </div> <!--end of comment-->
+                            <div class="comment">
+                                <div class="comment-header">
+                                    <span class="comment-author">kowalska23</span><span class="comment-date">15.10.2020 17:56</span>
+                                </div>
+                                <div class="comment-body">
+                                    <p class="comment-content">Curabitur vitae commodo enim. Nam vitae risus pretium</p>
+                                </div>
+                                <div class="comment-footer">
+                                    <button type="button" class="btn vote-up">
+                                        <i class="fas fa-thumbs-up"></i>
+                                    </button>
+                                    <span class="comment-votes-up">0</span>
+                                    <button type="button" class="btn vote-up">
+                                        <i class="fas fa-thumbs-down"></i>
+                                    </button>
+                                    <span class="comment-votes-down">0</span>
+                                </div>
+                            </div> <!--end of comment-->
+                        </div> <!--end of all comments-->
+                    </div> <!--end of comment with form-->
+            </div> <!--end of section with main article-->
+
+            <div class="col-12 col-md-4 sidebar-wrap">
+                <aside>
+                    <h2 class="sidebar-title">Zobacz również</h2>
+                    <figure class="figure">
+                        <img src="images/doctor.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
+                        <figcaption class="figure-caption">Lekarze leczą w szpitalach</figcaption>
+                    </figure>
+                    <figure class="figure">
+                        <img src="images/corona.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
+                        <figcaption class="figure-caption">Kolejne restrykcje</figcaption>
+                    </figure>
+                    <figure class="figure">
+                        <img src="images/shopping.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
+                        <figcaption class="figure-caption">Sklepy zamknięte z powodu pandemii</figcaption>
+                    </figure>
+                    <figure class="figure">
+                        <img src="images/doctor-yes.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
+                        <figcaption class="figure-caption">Johnson&Johnson bezpieczna</figcaption>
+                    </figure>
+                </aside>
+            </div> <!--end of sidebar-->
+        </div> <!--end of main container-->
+
+    </div> <!--end of wrap-->
 </body>
 
 </html>
