--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         <header class="header">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container">
-                <div><a href="#" class="header-logo">
-                    <div class="header-logo-icon"></div>
-                    <span class="header-logo-text">Logo.pl</span>
-                </a></div>
+                <div>
+                    <a href="#" class="header-logo">
+                        <div class="header-logo-icon"></div>
+                        <span class="header-logo-text">Logo.pl</span>
+                    </a>
+                </div>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -36,8 +38,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Sport</a>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Zdrowie<span class="sr-only">(current)</span></a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Zdrowie</a>
                         </li>
                     </ul>
                 </div>
