--- a/index.html
+++ b/index.html
@@ -21,31 +21,38 @@
         <header class="header">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container">
-                <div>
-                    <a href="#" class="header-logo">
-                        <div class="header-logo-icon"></div>
-                        <span class="header-logo-text">Logo.pl</span>
-                    </a>
-                </div>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Polska</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Świat</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Sport</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Zdrowie</a>
-                        </li>
-                    </ul>
-                </div>
+                    <div>
+                        <a href="#" class="header-logo">
+                            <div class="header-logo-icon"></div>
+                            <span class="header-logo-text">Logo.pl</span>
+                        </a>
+                    </div>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button> <!--burger menu-->
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Polska</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Świat</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Sport</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Zdrowie</a>
+                                </li>
+                            </ul>
+                        </div> <!--end of navigation-->
+                    </div> <!--end of navigation collapse-->
+                </div> <!--end of container-->
             </nav>
-            </div>
         </header>
+        
 
         <div class="container">
             <div class="row">
