Add and style footer

--- a/index.html
+++ b/index.html
@@ -140,30 +140,66 @@
                             </div> <!--end of comment-->
                         </div> <!--end of all comments-->
                     </div> <!--end of comment with form-->
-            </div> <!--end of section with main article-->
+                </div> <!--end of section with main article-->
 
-            <div class="col-12 col-md-4 sidebar-wrap">
-                <aside>
-                    <h2 class="sidebar-title">Zobacz również</h2>
-                    <figure class="figure">
-                        <img src="images/doctor.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
-                        <figcaption class="figure-caption">Lekarze leczą w szpitalach</figcaption>
-                    </figure>
-                    <figure class="figure">
-                        <img src="images/corona.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
-                        <figcaption class="figure-caption">Kolejne restrykcje</figcaption>
-                    </figure>
-                    <figure class="figure">
-                        <img src="images/shopping.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
-                        <figcaption class="figure-caption">Sklepy zamknięte z powodu pandemii</figcaption>
-                    </figure>
-                    <figure class="figure">
-                        <img src="images/doctor-yes.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
-                        <figcaption class="figure-caption">Johnson&Johnson bezpieczna</figcaption>
-                    </figure>
-                </aside>
-            </div> <!--end of sidebar-->
+                <div class="col-12 col-md-4 sidebar-wrap">
+                    <aside>
+                        <h2 class="sidebar-title">Zobacz również</h2>
+                        <figure class="figure">
+                            <img src="images/doctor.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
+                            <figcaption class="figure-caption">Lekarze leczą w szpitalach</figcaption>
+                        </figure>
+                        <figure class="figure">
+                            <img src="images/corona.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
+                            <figcaption class="figure-caption">Kolejne restrykcje</figcaption>
+                        </figure>
+                        <figure class="figure">
+                            <img src="images/shopping.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
+                            <figcaption class="figure-caption">Sklepy zamknięte z powodu pandemii</figcaption>
+                        </figure>
+                        <figure class="figure">
+                            <img src="images/doctor-yes.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
+                            <figcaption class="figure-caption">Johnson&Johnson bezpieczna</figcaption>
+                        </figure>
+                    </aside>
+                </div> <!--end of sidebar-->
+            </div> <!--end of main row-->
         </div> <!--end of main container-->
+
+        <footer class="footer">
+            <div class="container footer-container">
+                <div class="row">
+                    <div class="col-6 col-md-3 footer-column">
+                        <h3 class="footer-column-title">Nasze serwisy</h3>
+                        <ul class="footer-column-list">
+                            <li><a href="#" class="footer-column-list-link text-reset">Polska</a></li>
+                            <li><a href="#" class="footer-column-list-link text-reset">Świat</a></li>
+                            <li><a href="#" class="footer-column-list-link text-reset">Sport</a></li>
+                            <li><a href="#" class="footer-column-list-link text-reset">Zdrowie</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6 col-md-3 footer-column">
+                        <h3 class="footer-column-title">About</h3>
+                        <ul class="footer-column-list">
+                            <li><a href="#" class="footer-column-list-link text-reset">Logo.pl</a></li>
+                            <li><a href="#" class="footer-column-list-link text-reset">Kontakt</a></li>
+                            <li><a href="#" class="footer-column-list-link text-reset">Kariera</a></li>
+                        </ul>
+                    </div>
+                    <div class=" col-12 col-md-6 footer-column text">
+                        <h3 class="footer-column-title">Logo.pl</h3>
+                        <p class="footer-column-text">Curabitur vitae commodo enim. Nam vitae risus pretium, viverra enim sed, varius sem. Morbi a felis est. Phasellus
+                        porttitor molestie mattis</p>
+                    </div>
+                    <div class="col footer-column-social">
+                        <a href="https://www.facebook.com/home.php"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/home"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+                <p class="copyright">Copyright © Logo.pl</p>
+            </div>
+        </footer>
 
     </div> <!--end of wrap-->
 </body>
