--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="wrap">
         <header class="header">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                 <div class="container">
                     <div>
                         <a href="#" class="header-logo">
