Wrap sidebar elements in links

--- a/index.html
+++ b/index.html
@@ -145,22 +145,22 @@
                 <div class="col-12 col-md-4 sidebar-wrap">
                     <aside>
                         <h2 class="sidebar-title">Zobacz również</h2>
-                        <figure class="figure">
+                        <a href="#" class="sidebar-element text-reset"><figure class="figure">
                             <img src="images/doctor.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
                             <figcaption class="figure-caption">Lekarze leczą w szpitalach</figcaption>
-                        </figure>
-                        <figure class="figure">
+                        </figure></a>
+                        <a href="#" class="sidebar-element text-reset"><figure class="figure">
                             <img src="images/corona.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
                             <figcaption class="figure-caption">Kolejne restrykcje</figcaption>
-                        </figure>
-                        <figure class="figure">
+                        </figure></a>
+                        <a href="#" class="sidebar-element text-reset"><figure class="figure">
                             <img src="images/shopping.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
                             <figcaption class="figure-caption">Sklepy zamknięte z powodu pandemii</figcaption>
-                        </figure>
-                        <figure class="figure">
+                        </figure></a>
+                        <a href="#" class="sidebar-element text-reset"><figure class="figure">
                             <img src="images/doctor-yes.jpg" class="figure-img img-fluid rounded" alt="Potrzebujemy szczepionek">
                             <figcaption class="figure-caption">Johnson&Johnson bezpieczna</figcaption>
-                        </figure>
+                        </figure></a>
                     </aside>
                 </div> <!--end of sidebar-->
             </div> <!--end of main row-->
