--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         lectus. Fusce sit amet massa eget sapien mollis condimentum vitae efficitur tellus.</p>
                     </article>
                     <div class="article-comments">
-                        <form>
+                        <form class="form">
                             <div class="form-group">
                                 <label for="comment">Komentarze</label>
                                 <textarea name="comment" class="form-control" rows="2"></textarea>
@@ -104,31 +104,13 @@
                         <div class="row row-comment">
                             <div class="comment">
                                 <div class="comment-header">
-                                    <span class="comment-author">nick_nick</span><span class="comment-date">15.10.2020 14:45</span>
+                                    <span class="comment-author">nick_nick</span><span class="comment-date">15.10.2020, 14:45:21</span>
                                 </div>
                                 <div class="comment-body">
                                     <p class="comment-content">Phasellus faucibus egestas tincidunt. Morbi facilisis sapien vitae blandit maximus!</p>
                                 </div>
                                 <div class="comment-footer">
                                     <button type="button"class="btn vote-up">
-                                        <i class="fas fa-thumbs-up"></i>
-                                    </button>
-                                    <span class="comment-votes-up">0</span>
-                                    <button type="button" class="btn vote-up">
-                                        <i class="fas fa-thumbs-down"></i>
-                                    </button>
-                                    <span class="comment-votes-down">0</span>
-                                </div>
-                            </div> <!--end of comment-->
-                            <div class="comment">
-                                <div class="comment-header">
-                                    <span class="comment-author">kowalska23</span><span class="comment-date">15.10.2020 17:56</span>
-                                </div>
-                                <div class="comment-body">
-                                    <p class="comment-content">Curabitur vitae commodo enim. Nam vitae risus pretium</p>
-                                </div>
-                                <div class="comment-footer">
-                                    <button type="button" class="btn vote-up">
                                         <i class="fas fa-thumbs-up"></i>
                                     </button>
                                     <span class="comment-votes-up">0</span>
