--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                         <i class="fas fa-thumbs-up"></i>
                                     </button>
                                     <span class="comment-votes-up">0</span>
-                                    <button type="button" class="btn vote-up">
+                                    <button type="button" class="btn vote-down">
                                         <i class="fas fa-thumbs-down"></i>
                                     </button>
                                     <span class="comment-votes-down">0</span>
