--- a/index.html
+++ b/index.html
@@ -27,28 +27,26 @@
                             <span class="header-logo-text">Logo.pl</span>
                         </a>
                     </div>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button> <!--burger menu-->
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Polska</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Świat</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Sport</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Zdrowie</a>
-                                </li>
-                            </ul>
-                        </div> <!--end of navigation-->
-                    </div> <!--end of navigation collapse-->
+                    <div class="collapse navbar-collapse bg-light" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Polska</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Świat</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Sport</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Zdrowie</a>
+                            </li>
+                        </ul>
+                    </div> <!--end of navigation-->
                 </div> <!--end of container-->
             </nav>
         </header>
@@ -186,6 +184,12 @@
     </div> <!--end of wrap-->
 
     <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 </body>
 
